active inactive added in minor head and submajorhead

--- a/src/app/demo/components/minorhead/minorhead.component.html
+++ b/src/app/demo/components/minorhead/minorhead.component.html
@@ -9,14 +9,20 @@
   </div>
 </div>
 
-
-
-  <p-button class="" (click)="showDeletedData()" label="SEE DELETED MINOR">
-    <i class="pi pi-eye mr-2"></i>
-  </p-button>
-  <p-button class="" (click)="showNormalData()" label="SEE MINOR">
-    <i class="pi pi-eye mr-2"></i>
-  </p-button>
+<div class="mb-2">
+  <p-tabView (onChange)="handleChange($event)">
+      <p-tabPanel header="Active">
+        <p>
+          There are {{totalActiveMinorHead}} DDO's are active out of {{totalActiveMinorHead + totalInactiveMinorHead}} DDO's given below.
+        </p>
+      </p-tabPanel>
+      <p-tabPanel header="Inactive">
+        <p>
+          There are {{totalInactiveMinorHead}} DDO's are inactive out of {{totalActiveMinorHead + totalInactiveMinorHead}} DDO's given below.
+        </p>
+      </p-tabPanel>
+  </p-tabView>
+</div>
 
 
 <p-toast></p-toast>
