--- a/src/app/demo/components/masterForms/departmentforms/departmentforms.component.html
+++ b/src/app/demo/components/masterForms/departmentforms/departmentforms.component.html
@@ -55,7 +55,7 @@
                     <div *ngIf="userForm.get('DemandCode')?.errors?.['minlength']">
                       Minimum length is 1 characters.
                     </div>
-                    <div *ngIf="userForm.get('DemandCode')?.errors?.['minlength']">
+                    <div *ngIf="userForm.get('DemandCode')?.errors?.['maxlength']">
                       Maximum length is 2 characters.
                     </div>
                   </div>
