--- a/src/app/demo/components/masterForms/mastersubdetailheadform/mastersubdetailheadform.component.html
+++ b/src/app/demo/components/masterForms/mastersubdetailheadform/mastersubdetailheadform.component.html
@@ -6,7 +6,7 @@
             <div class="mb-4 mt-3">
                 <label class="text-2xl" for="firstname2">Select Detail Head<span class="red"> *</span> : </label>
                 <p-dropdown class="ml-3" [style]="{'width':'67%'}" [options]="codes" [virtualScroll]="true" [virtualScrollItemSize]="30" formControlName="DetailHeadId"
-                    placeholder="Select Treasury" optionLabel="name" optionValue="id">
+                    placeholder="Select Detail" optionLabel="name" optionValue="id">
                     <ng-template let-option pTemplate="item">
                         {{ option.code }} : {{ option.name }}
                     </ng-template>
