my code is update

--- a/src/app/demo/components/submajorhead/submajorhead.component.html
+++ b/src/app/demo/components/submajorhead/submajorhead.component.html
@@ -13,12 +13,12 @@
   <p-tabView (onChange)="handleChange($event)">
       <p-tabPanel header="Active">
         <p>
-          There are {{totalActiveSubMajorHead}} DDO's are active out of {{totalActiveSubMajorHead + totalInactiveSubMajorHead}} DDO's given below.
+          There are {{totalActiveSubMajorHead}} submajorhead's are active out of {{totalActiveSubMajorHead + totalInactiveSubMajorHead}} submajorhead's given below.
         </p>
       </p-tabPanel>
       <p-tabPanel header="Inactive">
         <p>
-          There are {{totalInactiveSubMajorHead}} DDO's are inactive out of {{totalActiveSubMajorHead + totalInactiveSubMajorHead}} DDO's given below.
+          There are {{totalInactiveSubMajorHead}} submajorhead's are inactive out of {{totalActiveSubMajorHead + totalInactiveSubMajorHead}} submajorhead's given below.
         </p>
       </p-tabPanel>
   </p-tabView>
