--- a/src/app/demo/components/masterForms/sub-major-head-forms/sub-major-head-forms.component.html
+++ b/src/app/demo/components/masterForms/sub-major-head-forms/sub-major-head-forms.component.html
@@ -24,10 +24,10 @@
                   </div>
                 </div>
                 <div class="field col">
-                  <label class="text-2xl" for="firstname2">Name<span class="red"> *</span></label>
+                  <label class="text-2xl" for="firstname2">Sub Major Head Name<span class="red"> *</span></label>
                   <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="Name">
                   <div *ngIf="userForm.get('Designation')?.invalid && userForm.get('Designation')?.touched" class="error">
-                    Name Mstld is required.
+                    Name  is required.
                   </div>
                 </div>
               </div>
