--- a/src/app/demo/components/masterddo/masterddo.component.html
+++ b/src/app/demo/components/masterddo/masterddo.component.html
@@ -29,5 +29,5 @@
 <mh-prime-dynamic-table size="small" [numberRowsShown]="10"
   [rowsPerPageOptions]="[10, 30, 50]"  [data]="tableData" rowSelectionMode="multiple" [actionButtons]="actionButtonConfig" (rowSelect)="handleRowSelection($event)"
   (actionButtonClicked)="handleButtonClick($event)" (queryParameterChange)="handQueryParameterChange($event)"
-  (searchKeyChange)="handleSearch($event)" [isLoading]="istableLoading" [showTopMenubar]="true" [showGlobalSearch]="true">
+  (searchKeyChange)="handleSearch($event)" [isLoading]="istableLoading" [showTopMenubar]="true" [showGlobalSearch]="false">
 </mh-prime-dynamic-table>
