--- a/src/app/demo/components/masterForms/master-minorhead-forms/master-minorhead-forms.component.html
+++ b/src/app/demo/components/masterForms/master-minorhead-forms/master-minorhead-forms.component.html
@@ -2,28 +2,15 @@
     <div class="flex flex-wrap align-items-center justify-content-end">
 
         <form [formGroup]="userForm">
-            <!-- <div class="mb-4 mt-3">
-                <label class="text-2xl" for="firstname2">Select SubMajorHead <span class="red"> *</span> : </label>
-                <p-dropdown class="ml-3" [style]="{'width':'67%'}" [options]="codes" formControlName="SubMajorHeadCode"
-                    placeholder="Select SubMajorHead" optionLabel="name" optionValue="code" (onChange)="getTcode()">
-                    <ng-template let-option pTemplate="item">
-                        {{ option.code }} : {{ option.name }}
-                    </ng-template>
-                </p-dropdown>
-                <div *ngIf="userForm.get('TreasuryCode')?.invalid && userForm.get('TreasuryCode')?.touched"
-                    class="error">
-                    Treasury Code is required.
-                </div>
-            </div>        -->
             <div class="mb-4 mt-3">
                 <label class="text-2xl" for="firstname2">Select SubMajorHead <span class="red"> *</span> : </label>
-                <p-dropdown class="ml-3" [style]="{'width':'60%'}"[virtualScroll]="true" [virtualScrollItemSize]="35" [options]="codes" formControlName="SubMajorHeadCode"
-                    placeholder="Select Treasury" optionLabel="name" optionValue="id">
+                <p-dropdown class="ml-3" [style]="{'width':'60%'}"[virtualScroll]="true" [virtualScrollItemSize]="35" [options]="codes" formControlName="SubMajorId"
+                    placeholder="Select Sub Major Head" optionLabel="name" optionValue="id">
                     <ng-template let-option pTemplate="item">
                         {{ option.code }} : {{ option.name }}
                     </ng-template>
                 </p-dropdown>
-                <div *ngIf="userForm.get('DetailHeadId')?.invalid && userForm.get('DetailHeadId')?.touched"
+                <div *ngIf="userForm.get('SubMajorId')?.invalid && userForm.get('SubMajorId')?.touched"
                     class="error">
                     Detail Head Code is required.
                 </div>
@@ -33,10 +20,10 @@
                     <label class="text-2xl" for="firstname2">Minor Code<span class="red"> *</span> :</label>
                     <input id="firstname2" type="text"
                         class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
-                        formControlName="MinorCode">
-                    <div *ngIf="userForm.get('Designation')?.invalid && userForm.get('Designation')?.touched"
+                        formControlName="Code">
+                    <div *ngIf="userForm.get('Code')?.invalid && userForm.get('Code')?.touched"
                         class="error">
-                        Designation is required.
+                        Minor Head Code is required.
                     </div>
                 </div>
            
@@ -46,9 +33,9 @@
                     <label class="text-2xl" for="firstname2">Minor Name<span class="red"> *</span> :</label>
                     <input id="firstname2" type="text"
                         class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
-                        formControlName="MinorName">
-                        <div *ngIf="userForm.get('MinorName')?.invalid && userForm.get('MinorName')?.touched" class="error">
-                            Sub Detail Head name is required.
+                        formControlName="Name">
+                        <div *ngIf="userForm.get('Name')?.invalid && userForm.get('Name')?.touched" class="error">
+                            Minor Head name is required.
                         </div>
                 </div>
             </div>
