--- a/src/app/demo/components/masterForms/sub-major-head-forms/sub-major-head-forms.component.html
+++ b/src/app/demo/components/masterForms/sub-major-head-forms/sub-major-head-forms.component.html
@@ -4,14 +4,14 @@
         <form [formGroup]="userForm">
             <div class="mb-4 mt-3">
                 <label class="text-2xl" for="firstname2">Select MajorHead <span class="red"> *</span> : </label>
-                <p-dropdown class="ml-3"[virtualScroll]="true" [virtualScrollItemSize]="30" [style]="{'width':'64%'}" [options]="codes" formControlName="majorheadcode"
-                  placeholder="Select MajorHead ID" optionLabel="name" optionValue="id" >
+                <p-dropdown class="ml-3"[virtualScroll]="true" [virtualScrollItemSize]="30" [style]="{'width':'64%'}" [options]="codes" formControlName="MajorHeadId"
+                  placeholder="Select MajorHead" optionLabel="name" optionValue="id" >
                   <ng-template let-option pTemplate="item">
                     {{ option.code }} : {{ option.name }}
                   </ng-template>
                 </p-dropdown>
-                <div *ngIf="userForm.get('majorheadcode')?.invalid && userForm.get('majorheadcode')?.touched" class="error">
-                  MajorHead_ID Code is required.
+                <div *ngIf="userForm.get('MajorHeadId')?.invalid && userForm.get('MajorHeadId')?.touched" class="error">
+                  MajorHead is required.
                 </div>
               </div>
               
@@ -20,14 +20,14 @@
                   <label class="text-2xl" for="firstname2">SubMajor Head Code<span class="red"> *</span></label>
                   <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="Code">
                   <div *ngIf="userForm.get('Code')?.invalid && userForm.get('Code')?.touched" class="error">
-                    Code is required.
+                    Sub Major Head code is required.
                   </div>
                 </div>
                 <div class="field col">
                   <label class="text-2xl" for="firstname2">Sub Major Head Name<span class="red"> *</span></label>
                   <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="Name">
                   <div *ngIf="userForm.get('Designation')?.invalid && userForm.get('Designation')?.touched" class="error">
-                    Name  is required.
+                    Sub Major Head name  is required.
                   </div>
                 </div>
               </div>
