count highlighted in all table and dialog colour added in ddo detail and sub detail head

--- a/src/app/demo/components/dashboard/dashboard.component.html
+++ b/src/app/demo/components/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
 <app-dashboardskeleton></app-dashboardskeleton>
 </div>
 <ng-template #showData>
-    <p-breadcrumb [model]="items" [home]="home"></p-breadcrumb>
+    <p-breadcrumb [model]="items" [home]="home" [style]="{'width': '95.8%'}"></p-breadcrumb>
     <div class="grid mt-1">
         <div class="col">
             <p-card header="DDO" [style]="{width: '360px'}" styleClass="p-card-shadow">
