--- a/src/app/demo/components/dashboardskeleton/dashboardskeleton.component.html
+++ b/src/app/demo/components/dashboardskeleton/dashboardskeleton.component.html
@@ -1,5 +1,5 @@
 <div class="mt-3">
-    <p-skeleton height="3rem" styleClass="mb-2"></p-skeleton>
+    <p-skeleton height="3rem" width="89.6rem" styleClass="mb-2"></p-skeleton>
 </div>
 <div class="grid mt-4">
         <div *ngFor="let item of items" class="col">
