--- a/src/app/demo/components/majorhead/majorhead.component.html
+++ b/src/app/demo/components/majorhead/majorhead.component.html
@@ -14,12 +14,12 @@
   <p-tabView (onChange)="handleChange($event)">
       <p-tabPanel header="Active">
         <p>
-          There are {{totalActiveMajorHead}} MajorHead's are active out of {{totalActiveMajorHead + totalInactiveMajorHead}} MajorHead's given below.
+          There are <span class="highlightActiveMaster">{{totalActiveMajorHead}}</span> MajorHead's are active out of <span class="highlightTotalMaster">{{totalActiveMajorHead + totalInactiveMajorHead}}</span> MajorHead's given below.
         </p>
       </p-tabPanel>
       <p-tabPanel header="Inactive">
         <p>
-          There are {{totalInactiveMajorHead}} MajorHead's are inactive out of {{totalActiveMajorHead + totalInactiveMajorHead}} MajorHead's given below.
+          There are <span class="highlightInactiveMaster">{{totalInactiveMajorHead}}</span> MajorHead's are inactive out of <span class="highlightTotalMaster">{{totalActiveMajorHead + totalInactiveMajorHead}}</span> MajorHead's given below.
         </p>
       </p-tabPanel>
   </p-tabView>
