--- a/src/app/demo/components/masterdetailhead/masterdetailhead.component.html
+++ b/src/app/demo/components/masterdetailhead/masterdetailhead.component.html
@@ -16,12 +16,12 @@
   <p-tabView (onChange)="handleChange($event)">
     <p-tabPanel header="Active">
       <p>
-        There are {{totalActiveDetailHead}} Detail Head's are active out of {{totalActiveDetailHead + totalInactiveDetailHead}} Detail Head's given below.
+        There are <span class="highlightActiveMaster">{{totalActiveDetailHead}}</span> Detail Head's are active out of <span class="highlightTotalMaster">{{totalActiveDetailHead + totalInactiveDetailHead}}</span> Detail Head's given below.
       </p>
     </p-tabPanel>
     <p-tabPanel header="Inactive">
       <p>
-        There are {{totalInactiveDetailHead}} Detail Head's are inactive out of {{totalActiveDetailHead + totalInactiveDetailHead}} Detail Head's given below.
+        There are <span class="highlightInactiveMaster">{{totalInactiveDetailHead}}</span> Detail Head's are inactive out of <span class="highlightTotalMaster">{{totalActiveDetailHead + totalInactiveDetailHead}}</span> Detail Head's given below.
       </p>
     </p-tabPanel>
   </p-tabView>
