--- a/src/app/demo/components/mastersubdetailhead/mastersubdetailhead.component.html
+++ b/src/app/demo/components/mastersubdetailhead/mastersubdetailhead.component.html
@@ -15,12 +15,12 @@
   <p-tabView (onChange)="handleChange($event)">
   <p-tabPanel header="Active">
       <p>
-        There are {{totalActiveSubDetailHead}} Sub Detail Head's are active out of {{totalActiveSubDetailHead + totalInactiveSubDetailHead}} Sub Detail Head's given below.
+        There are <span class="highlightActiveMaster">{{totalActiveSubDetailHead}}</span> Sub Detail Head's are active out of <span class="highlightTotalMaster">{{totalActiveSubDetailHead + totalInactiveSubDetailHead}}</span> Sub Detail Head's given below.
       </p>
     </p-tabPanel>
     <p-tabPanel header="Inactive">
       <p>
-        There are {{totalInactiveSubDetailHead}} Sub Detail Head's are inactive out of {{totalActiveSubDetailHead + totalInactiveSubDetailHead}} Sub Detail Head's given below.
+        There are <span class="highlightInactiveMaster">{{totalInactiveSubDetailHead}}</span> Sub Detail Head's are inactive out of <span class="highlightTotalMaster">{{totalActiveSubDetailHead + totalInactiveSubDetailHead}}</span> Sub Detail Head's given below.
       </p>
     </p-tabPanel>
   </p-tabView>
