--- a/src/app/demo/components/masterForms/departmentforms/departmentforms.component.html
+++ b/src/app/demo/components/masterForms/departmentforms/departmentforms.component.html
@@ -45,7 +45,7 @@
               <div class="formgrid grid">
                 <div class="field col">
                   <label class="text-2xl" for="firstname2">Demand Code<span class="red"> *</span></label>
-                  <input id="firstname2" type="text" (keyup)="onChangedata($event)"
+                  <input id="firstname2" type="text" (blur)="onChangedata($event)"
                     class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
                     formControlName="DemandCode">
                   <div class="error" *ngIf="userForm.get('DemandCode')?.touched && userForm.get('DemandCode')?.invalid">
