--- a/src/app/demo/components/masterForms/master-majorhead-forms/master-majorhead-forms.component.html
+++ b/src/app/demo/components/masterForms/master-majorhead-forms/master-majorhead-forms.component.html
@@ -6,7 +6,7 @@
         <div class="formgrid grid">
           <div class="field col">
             <label class="text-2xl" for="firstname2">Major Head Code<span class="red"> *</span></label>
-            <input id="firstname" type="text" (keyup)="onChangedata($event)"
+            <input id="firstname" type="text" (blur)="onChangedata($event)"
               class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
               formControlName="Code">
             <div *ngIf="userForm.get('Code')?.invalid && userForm.get('Code')?.touched" class="error">
